# vater

./: .coveragerc  .gitignore  .travis.yml  LICENSE.txt  Makefile  README.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements-lint.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  skr.py
.github/workflows/: ci.yaml
docs/: api.rst  client.rst  conf.py  contents.rst  index.rst  installation.rst  introduction.rst  models.rst  usage.rst
pip-wheel-metadata/vater.dist-info/: METADATA  top_level.txt
src/vater/: __about__.py  __init__.py  api_request.py  cli.py  client.py  client2.py  errors.py  models.py  request_types.py  utils.py  validators.py
tests/: __init__.py  conftest.py  integration_tests.py  test_async_client.py  test_cli.py  test_client.py
vater/: __init__.py  client.py  errors.py  models.py
